# sber-hp

./: .gitignore  CMakeLists.txt  README.md
examples/cpp/: live-id.cpp
examples/python/: create_slices_covers80.ipynb  liveid-cia-ev.ipynb
examples/python/.ipynb_checkpoints/: liveid-checkpoint.ipynb
examples/python/cache/: filters.cereal
include/hpfw/: utils.h
include/hpfw/audioproblems/live-song-id/: live_song_id.h
include/hpfw/core/: parallel_collector.h
include/hpfw/spectrum/: cqt.h
modules/python/pyhpfw/: pyhpfw.py
